--- a/src/front/styles/signupform.css
+++ b/src/front/styles/signupform.css
@@ -526,6 +526,12 @@
     display: table-cell;
     width: 50%;
   }
+
+  .card-3 .card-heading-about{
+    background: url("https://media.istockphoto.com/photos/young-active-sweaty-strong-fit-muscular-man-with-big-muscles-doing-picture-id1303536001?b=1&k=20&m=1303536001&s=170667a&w=0&h=Evhzxs6moQrni6wBdwGjIA7XlgLdD1uZOFSJHJlJx3k=") top left/cover no-repeat;
+    display: table-cell;
+    width: 30%;
+  }
   
   .card-3 .card-body {
     padding: 57px 65px;
