--- a/src/front/styles/trainerProfilePage.css
+++ b/src/front/styles/trainerProfilePage.css
@@ -2,6 +2,12 @@
   border: 1px solid blue;
 } */
 
+img {
+  border-radius: 100%;
+  margin-top: 15px;
+  margin-left: 15px;
+}
+
 .pfpTrainer {
   border-radius: 50%;
   height: auto;
@@ -82,7 +88,8 @@ button:hover {
 }
 
 .bio-graph-info {
-  color: #89817e;
+  color: black;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .bio-graph-info h1 {
