--- a/src/front/styles/loggedinnavbar.css
+++ b/src/front/styles/loggedinnavbar.css
@@ -1,5 +1,16 @@
 .pfpNavbar {
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
     border-radius: 50%;
+}
+
+.navbar-brand {
+    display: inline-block;
+    color: rgb(252, 60, 5);
+    font-family: "Righteous", serif;
+    text-shadow: 0.03em 0.03em 0 rgb(0, 0, 0);
+}
+
+.nav-item {
+    font-family: "Roboto", sans-serif;
 }
