search looks good just needto add the trainer type filter. Also the tab for the trainer profiles work

--- a/src/front/styles/loggedinnavbar.css
+++ b/src/front/styles/loggedinnavbar.css
@@ -6,7 +6,7 @@
 
 .navbar-brand {
     display: inline-block;
-    color: rgb(252, 60, 5);
+    color: #ff3d07;
     font-family: "Righteous", serif;
     text-shadow: 0.03em 0.03em 0 rgb(0, 0, 0);
 }
